--- a/layouts/grants/single.html
+++ b/layouts/grants/single.html
@@ -14,7 +14,7 @@
     </a>
   </section>
 
-  <img class="header-image" src="/assets/images/study.jpg" alt="">
+  <img class="header-image" src="/assets/images/study.jpg" alt="" width="900" height="338">
 
   <section class="grants-features">
 
