--- a/layouts/index.html
+++ b/layouts/index.html
@@ -26,7 +26,7 @@
       </p>
     </a>
 
-    <a class="card card-text--center card--grants" href="/">
+    <a class="card card-text--center card--grants" href="/grants/">
       <h3 class="card-title">
         Обучение в Китае по гранту
       </h3>
