Fix links and footer

--- a/layouts/camp/single.html
+++ b/layouts/camp/single.html
@@ -9,7 +9,7 @@
     <p class="page-subtitle">
       Программа для детей 10–14 лет. Набор до 1 апреля
     </p>
-    <a class="page-header-button" href="https://forms.gle/2MUZKqsjyd8ECpcS7">
+    <a target="_blank" class="page-header-button" href="https://forms.gle/2MUZKqsjyd8ECpcS7">
       Записаться
     </a>
   </div>
@@ -83,7 +83,7 @@
 
   <p class="page-text">🕑 Крайний срок подачи заявки – 25 апреля 2025 г.</p>
 
-  <a class="big-button" href="https://forms.gle/2MUZKqsjyd8ECpcS7">
+  <a target="_blank" class="big-button" href="https://forms.gle/2MUZKqsjyd8ECpcS7">
     Подать заявку
   </a>
 
