--- a/layouts/grants/single.html
+++ b/layouts/grants/single.html
@@ -9,7 +9,7 @@
     <p class="page-subtitle">
       Получите 100% гарантию зачисления в ВУЗ и высокий шанс на грант
     </p>
-    <a class="page-header-button" href="https://forms.gle/oJCrk3qPJrb47fP89">
+    <a target="_blank" class="page-header-button" href="https://forms.gle/oJCrk3qPJrb47fP89">
       Подать заявку
     </a>
   </section>
@@ -170,7 +170,7 @@
       </p>
     </div>
 
-    <a class="big-button" href="https://forms.gle/oJCrk3qPJrb47fP89">
+    <a target="_blank" class="big-button" href="https://forms.gle/oJCrk3qPJrb47fP89">
       Подать заявку
     </a>
 
