--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,7 +1,7 @@
 <footer>
 	Информация, представленная на сайте, не является публичной офертой. Пожалуйста, уточняйте актуальную информацию
 	у менеджера.<br>
-	{{ dateFormat "2006" now }}, Хаостади – обучение и бизнес в Китае
+	2024–{{ dateFormat "2006" now }}, Хаостади – обучение и бизнес в Китае.
 </footer>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
