Фиксит фотки и город

--- a/layouts/camp/single.html
+++ b/layouts/camp/single.html
@@ -14,19 +14,11 @@
     </a>
   </div>
 
-  <div class="fotorama-wrapper">
-    <div class="fotorama">
-      <img src="/assets/images/camp.avif" width="780" height="478">
-      <img src="/assets/images/camp.avif" width="780" height="478">
-      <img src="/assets/images/camp.avif" width="780" height="478">
-      <img src="/assets/images/camp.avif" width="780" height="478">
-      <img src="/assets/images/camp.avif" width="780" height="478">
-    </div>
-  </div>
+  <img class="page-image" src="/assets/images/lanzhou-1.avif" width="900" height="675">
 
   <p class="page-lead">
     📆 Даты: 15–28 июля<br>
-    📍 Остров Хайнань<br>
+    📍 Университет Ланчжоу<br>
     🧑🏻‍🎓 Программа доступна для детей от 14 лет<br>
     🕔 Длительность программы – 14 дней<br>
     🎯 Приём заявок до 1 апреля 2025 г.
@@ -37,17 +29,22 @@
   </h2>
 
   <p class="page-text">
-    ✅ Цель – повысить навыки аудирования, разговорной речи, чтения и письма на китайском языке, а также познакомиться
-    с богатой китайской культурой и посетить один из красивейших городов Китая!
+    ✅ Цель – повысить навыки аудирования, разговорной речи, чтения и письма на китайском языке, а также познакомиться
+    с богатой китайской культурой и посетить один из красивейших городов Китая!
   </p>
 
   <p class="page-text">
-    🏫 Кампус BLCU Hainan расположен в пилотной зоне международного образования Lingshui Lian (ILIEZ) на Хайнане,
-    недалеко от курортного города Санья.
+    🏫 Университет Ланчжоу – государственный ВУЗ, является одним из крупнейших комплексных учреждений Китая. Университет
+    курирует Министерство просвещения КНР. В пределах Ланьчжоу расположен университетский кампус городского типа,
+    который разделен на шесть частей.
+  </p>
 
-    Университет находится в городе Далянь, самом красивом прибрежном городе на северо-востоке Китая. Здесь мягкий
-    климат, а кампус окружен прекрасным видом на море и великолепными горами, что делает университет отличным выбором
-    для летней стажировки. 
+  <img class="page-image" src="/assets/images/lanzhou-3.jpg" width="780" height="478">
+
+  <p class="page-text">
+    👩🏻‍🏫 Университет имеет тесную связь с гуманитарными и техническими фондами Китая. На территории кампуса находится
+    исследовательский центр, изучающий проблемы экологии в Центральной Азии. Университет Ланчжоу сочетает в себе
+    академическое превосходство, современные технологии и уникальные возможности для студентов и исследователей.
   </p>
 
   <h2 class="page-h2">Стоимость</h2>
@@ -81,7 +78,7 @@
     Успейте подать заявку
   </h2>
 
-  <p class="page-text">🕑 Крайний срок подачи заявки – 25 апреля 2025 г.</p>
+  <p class="page-text">🕑 Крайний срок подачи заявки – 1 апреля 2025 г.</p>
 
   <a target="_blank" class="big-button" href="https://forms.gle/2MUZKqsjyd8ECpcS7">
     Подать заявку
