--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -251,7 +251,13 @@ nav {
 
 .header-image {
   margin: 28px 0;
-  border-radius: 24px;
+  border-radius: 20px;
+}
+
+.page-image {
+  width: 100%;
+  margin: 24px 0;
+  border-radius: 20px;
 }
 
 .page-lead {
