--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -18,6 +18,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css">
 
 	<link rel="icon" href="/assets/images/favicon.ico">
+	<meta name="yandex-verification" content="ed8e81e8698e7e31" />
 </head>
 
 <body>
