--- a/layouts/camp/single.html
+++ b/layouts/camp/single.html
@@ -7,7 +7,7 @@
       Летний лагерь Ланчжоу
     </h1>
     <p class="page-subtitle">
-      Программа для детей 10–14 лет. Набор до 1 апреля
+      Летняя программа по изучению китайского языка и культуры. Набор до 1 апреля.
     </p>
     <a target="_blank" class="page-header-button" href="https://forms.gle/2MUZKqsjyd8ECpcS7">
       Записаться
