--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -19,11 +19,29 @@
 
 	<link rel="icon" href="/assets/images/favicon.ico">
 	<meta name="yandex-verification" content="ed8e81e8698e7e31" />
-	<script
-		type="text/javascript"> (function (m, e, t, r, i, k, a) { m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) }; m[i].l = 1 * new Date(); for (var j = 0; j < document.scripts.length; j++) { if (document.scripts[j].src === r) { return; } } k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a) })(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym"); ym(100561207, "init", { clickmap: true, trackLinks: true, accurateTrackBounce: true }); </script>
+	<!-- Yandex.Metrika counter -->
+	<script type="text/javascript">
+		(function (m, e, t, r, i, k, a) {
+			m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
+			m[i].l = 1 * new Date();
+			for (var j = 0; j < document.scripts.length; j++) { if (document.scripts[j].src === r) { return; } }
+			k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+		})
+			(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+		ym(100561207, "init", {
+			clickmap: true,
+			trackLinks: true,
+			accurateTrackBounce: true,
+			webvisor: false,
+			trackHash: false,
+			ut: "no-cookie"
+		});
+	</script>
 	<noscript>
 		<div><img src="https://mc.yandex.ru/watch/100561207" style="position:absolute; left:-9999px;" alt="" /></div>
 	</noscript>
+	<!-- /Yandex.Metrika counter -->
 </head>
 
 <body>
