--- a/layouts/camp/single.html
+++ b/layouts/camp/single.html
@@ -7,7 +7,7 @@
       Летний лагерь Ланчжоу
     </h1>
     <p class="page-subtitle">
-      Летняя программа по изучению китайского языка и культуры. Набор до 1 апреля.
+      Летняя программа по изучению китайского языка и культуры. Набор до 30 апреля.
     </p>
     <a target="_blank" class="page-header-button" href="https://forms.gle/2MUZKqsjyd8ECpcS7">
       Записаться
@@ -17,11 +17,11 @@
   <img class="page-image" src="/assets/images/lanzhou-1.avif" width="900" height="675">
 
   <p class="page-lead">
-    📆 Даты: 15–28 июля<br>
+    📆 Даты: 1–13 июля<br>
     📍 Университет Ланчжоу<br>
     🧑🏻‍🎓 Программа доступна для детей от 14 лет<br>
-    🕔 Длительность программы – 14 дней<br>
-    🎯 Приём заявок до 1 апреля 2025 г.
+    🕔 Длительность программы – 2 недели<br>
+    🎯 Приём заявок до 30 апреля 2025 г.
   </p>
 
   <h2 class="page-h2">
@@ -50,25 +50,26 @@
   <h2 class="page-h2">Стоимость</h2>
 
   <p class="page-text">
-    💰 12,000 юаней
+    💰 4,500 юаней
   </p>
 
   <h2 class="page-h2">Включено</h2>
 
   <ul class="page-list">
-    <li>✅ Обучение и учебники</li>
-    <li>✅ Проживание в 2-местном номере</li>
-    <li>✅ Разнообразные насыщенные экскурсии</li>
+    <li>✅ Обучение</li>
+    <li>✅ Проживание</li>
+    <li>✅ Питание</li>
+    <li>✅ 3-дневная экскурсия в город Тяншуэй</li>
     <li>✅ Сопровождение русскоязычного куратора</li>
     <li>✅ Визовый сбор и оформление документов</li>
-    <li>✅ Сертификат вуза о прохождении стажировки</li>
-    <li>✅ Сопровождение от и до аэропорта </li>
+    <li>✅ Сопровождение от и до аэропорта</li>
+    <li>✅ Сертификат после завершения обучения</li>
+
   </ul>
 
   <h2 class="page-h2">Не включено</h2>
 
   <ul class="page-list">
-    <li>⛔️ Питание (помимо обедов, организуемых университетом)</li>
     <li>⛔️ Личные расходы</li>
     <li>⛔️ Страховка</li>
     <li>⛔️ Перелёт</li>
@@ -78,7 +79,7 @@
     Успейте подать заявку
   </h2>
 
-  <p class="page-text">🕑 Крайний срок подачи заявки – 1 апреля 2025 г.</p>
+  <p class="page-text">🕑 Крайний срок подачи заявки – 30 апреля 2025 г.</p>
 
   <a target="_blank" class="big-button" href="https://forms.gle/2MUZKqsjyd8ECpcS7">
     Подать заявку
