--- a/layouts/camp/single.html
+++ b/layouts/camp/single.html
@@ -61,7 +61,6 @@
     <li>✅ Питание</li>
     <li>✅ 3-дневная экскурсия в город Тяншуэй</li>
     <li>✅ Сопровождение русскоязычного куратора</li>
-    <li>✅ Визовый сбор и оформление документов</li>
     <li>✅ Сопровождение от и до аэропорта</li>
     <li>✅ Сертификат после завершения обучения</li>
 
@@ -70,6 +69,7 @@
   <h2 class="page-h2">Не включено</h2>
 
   <ul class="page-list">
+    <li>⛔️ Виза</li>
     <li>⛔️ Личные расходы</li>
     <li>⛔️ Страховка</li>
     <li>⛔️ Перелёт</li>
