--- a/layouts/index.html
+++ b/layouts/index.html
@@ -17,7 +17,7 @@
 
   <section class="cards">
 
-    <a class="card card-text--center card--grants" href="/grants/">
+    <a class="card card-text--top card--grants" href="/grants/">
       <h3 class="card-title">
         Обучение в Китае по гранту
       </h3>
@@ -48,14 +48,6 @@
   </h2>
 
   <section class="cards">
-    <a class="card card-text--bottom card--translator" href="/business/">
-      <h3 class="card-title">
-        Бизнес-сопровождение
-      </h3>
-      <p class="card-subtitle">
-        Встреча в аэропорту и переводчик для вашей поездки
-      </p>
-    </a>
 
     <a class="card card-text--bottom card--tours" href="/business/">
       <h3 class="card-title">
