--- a/assets/scss/_index.scss
+++ b/assets/scss/_index.scss
@@ -17,6 +17,7 @@
 
 .index-heading {
   font-size: $index-heading-font-size;
+  line-height: 120%;
   text-align: center;
   max-width: 524px;
   margin: 0 auto 40px;
